Show the ACR Expression in UI Modal #349

--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -279,8 +279,8 @@
                 <button type="button" class="btn btn-info" ng-click="addACRNewPath()">
                   <i class="mdi mdi-plus"></i> Add path
                 </button>
-                <button type="button" class="btn btn-primary" ng-click="showResourceJSON()">
-                  <i class="mdi mdi-information"></i> View Resource Json
+                <button type="button" class="btn btn-primary" ng-click="showACRExpressionJSON()">
+                  <i class="mdi mdi-information"></i> View ACR EXpression Json
                 </button>
               </div>
             </div>
