--- a/konga/assets/js/app/consumers/details/consumer-details.html
+++ b/konga/assets/js/app/consumers/details/consumer-details.html
@@ -20,6 +20,25 @@
     </div>
 
     <div class="form-group">
+        <label class="col-sm-4 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+        <div class="col-sm-7">
+            <chips ng-model="consumer.tags">
+                <chip-tmpl>
+                    <div class="default-chip">
+                        {{chip}}
+                        <i class="mdi mdi-close" remove-chip></i>
+                    </div>
+                </chip-tmpl>
+                <input chip-control/>
+            </chips>
+            <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+            <p class="help-block">
+                An optional set of strings associated with the Consumer, for grouping and filtering.
+            </p>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-sm-offset-3 col-sm-6">
             <button type="submit" class="btn btn-primary" ng-click="updateConsumerDetails()">
                 <i class="mdi mdi-check"></i>
