--- a/konga/assets/js/app/plugins/modals/edit-plugin-modal.html
+++ b/konga/assets/js/app/plugins/modals/edit-plugin-modal.html
@@ -50,31 +50,96 @@
                 </p>
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="col-sm-4 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+            <div class="col-sm-7">
+                <chips ng-model="data.tags">
+                    <chip-tmpl>
+                        <div class="default-chip">
+                            {{chip}}
+                            <i class="mdi mdi-close" remove-chip></i>
+                        </div>
+                    </chip-tmpl>
+                    <input chip-control/>
+                </chips>
+                <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+                <p class="help-block">
+                    An optional set of strings associated with the plugin, for grouping and filtering.
+                </p>
+            </div>
+        </div>
         <div class="form-group" ng-class="{'has-error' : errors[key]}" data-ng-repeat="(key,value) in data.fields">
             <label class="col-sm-4 control-label"><strong>{{humanizeLabel(key)}}</strong></label>
             <div class="col-sm-7">
                 <div ng-switch on="value.type">
-                    <div ng-switch-when="table">
-                        <div data-ng-repeat="(key,data) in value.schema.fields" class="plugin-field-table margin-bottom">
-
-                            <label>{{key}}</label>
-                            <div data-ng-if="value.schema.flexible">
-                                <button data-ng-click="removeField(value.schema.fields,key)" class="btn btn-sm btn-flat btn-danger" style="position: absolute;top: 0px;right: 15px">
-                                    <i class="mdi mdi-close"></i>
-                                </button>
-                                <div class="row margin-top">
-
-                                    <div class="col-md-4" data-ng-repeat="(k,v) in data.schema.fields">
-                                        <input type="{{v.type}}" ng-model="v.value" class="form-control">
-                                        <p class="help-block">{{k}}</p>
+                    <!-- TYPE: RECORD -->
+                    <div ng-switch-when="record">
+                        <div class="plugin-field-table">
+                            <div data-ng-repeat="field in value.fields">
+                                <!--<pre>{{field | json}}</pre>-->
+                                <label><i class="mdi mdi-chevron-right"></i>{{getFieldProp(field)}}</label>
+                                <div ng-switch on="field[getFieldProp(field)].type">
+                                    <div ng-switch-when="array">
+                                        <chips ng-model="field[getFieldProp(field)].value">
+                                            <chip-tmpl>
+                                                <div class="default-chip">
+                                                    {{chip}}
+                                                    <i class="mdi mdi-close" remove-chip></i>
+                                                </div>
+                                            </chip-tmpl>
+                                            <input chip-control/>
+                                        </chips>
                                     </div>
+                                    <div ng-switch-default>
+                                        <input type="{{field[getFieldProp(field)].type}}" ng-model="field[getFieldProp(field)].value" class="form-control">
+                                    </div>
+                                    <div class="text-danger" ng-if="errors[key]" data-ng-bind="errors[key]"></div>
+                                    <p class="help-block">{{data.help}}</p>
                                 </div>
                             </div>
+                        </div>
 
 
-                            <div data-ng-if="!value.schema.flexible">
+                    </div>
 
+                    <!-- TYPE: TABLE -->
+                    <div ng-switch-when="table">
+
+                        <div ng-if="value.schema.flexible">
+                            <div data-ng-repeat="(cf_key,cf_data) in value.custom_fields" class="plugin-field-table margin-bottom">
+                                <p class="no-margin">
+                                    <strong class="pull-left">{{cf_key}}</strong>
+                                    <button data-ng-click="removeCustomField(value,cf_key)" class="btn btn-sm btn-flat btn-danger pull-right" style="margin-top: -15px">
+                                        <i class="mdi mdi-close"></i>
+                                    </button>
+                                </p>
+                                <div class="clearfix"></div>
+                                <div class="row">
+                                    <div data-ng-repeat="(title,content) in cf_data" class="col-md-4">
+                                        <input type="{{content.type}}" class="form-control" data-ng-model="content.value"/>
+                                        <div class="help-block">{{title}}</div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="input-group">
+                                <input type="text"
+                                       on-key-enter="addCustomField(value)"
+                                       data-ng-model="value.custom_field"
+                                       class="form-control"
+                                       my-enter="doSomething()"
+                                       placeholder="add an object to limit...">
+                                <span class="input-group-btn">
+                                    <button data-ng-click="addCustomField(value)" class="btn btn-primary" type="button">
+                                        <i class="mdi mdi-plus"></i>
+                                    </button>
+                                </span>
+                            </div>
+                            <!--<pre>{{value.custom_fields | json}}</pre>-->
+                        </div>
+                        <div ng-if="!value.schema.flexible" class="plugin-field-table">
+                            <div data-ng-repeat="(key,data) in value.schema.fields">
+                                <label><i class="mdi mdi-chevron-right"></i>{{humanizeLabel(key)}}</label>
                                 <div ng-switch on="data.type">
                                     <div ng-switch-when="array">
                                         <chips ng-model="data.value">
@@ -94,35 +159,29 @@
                                     <p class="help-block">{{data.help}}</p>
                                 </div>
                             </div>
+                        </div>
 
-                        </div>
-                        <!-- Start Monkey patch for response-ratelimiting plugin -->
-                        <div data-ng-if="plugin.name === 'response-ratelimiting'">
-                            <div class="input-group">
-                                <input type="text"
-                                       on-key-enter="addFlexField(value.schema.fields,value)"
-                                       data-ng-model="value.flex_field"
-                                       class="form-control"
-                                       my-enter="doSomething()"
-                                       placeholder="add an object to limit...">
-                                <span class="input-group-btn">
-                                    <button data-ng-click="addFlexField(value.schema.fields,value)" class="btn btn-primary" type="button">
-                                        <i class="mdi mdi-plus"></i>
-                                    </button>
-                                </span>
-                            </div>
-                        </div>
-                        <!-- End Monkey patch for response-ratelimiting plugin -->
+
                     </div>
+
+                    <!-- TYPE: STRING -->
                     <div ng-switch-when="string">
-                        <div data-ng-if="value.enum">
-                            <select class="form-control" ng-model="value.value" ng-options="x for x in value.enum">
+                        <div data-ng-if="value.one_of">
+                            <select class="form-control" ng-model="value.value" ng-options="x for x in value.one_of">
                             </select>
                         </div>
-                        <div data-ng-if="!value.enum">
-                            <input type="text" ng-model="value.value" class="form-control">
+                        <div data-ng-if="!value.one_of">
+                            <!--<input type="text" ng-model="value.value" class="form-control">-->
+                            <textarea ng-model="value.value" class="form-control"></textarea>
                         </div>
                     </div>
+
+                    <!-- TYPE: INTEGER -->
+                    <div ng-switch-when="integer">
+                        <input type="number" ng-model="value.value" class="form-control"></input>
+                    </div>
+
+                    <!-- TYPE: ARRAY -->
                     <div ng-switch-when="array">
                         <chips ng-model="value.value">
                             <chip-tmpl>
@@ -135,33 +194,50 @@
                         </chips>
                         <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
                     </div>
+
+                    <!-- TYPE: SET -->
+                    <div ng-switch-when="set">
+                        <chips ng-model="value.value">
+                            <chip-tmpl>
+                                <div class="default-chip">
+                                    {{chip}}
+                                    <i class="mdi mdi-close" remove-chip></i>
+                                </div>
+                            </chip-tmpl>
+                            <input chip-control/>
+                        </chips>
+                        <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+                    </div>
+
+                    <!-- TYPE: SELECT -->
                     <div ng-switch-when="select">
                         <select class="form-control"  ng-model="value.value">
                             <option  ng-repeat="item in units" ng-value="item">{{item}}</option>
                         </select>
                     </div>
+
+                    <!-- TYPE: BOOLEAN -->
                     <div ng-switch-when="boolean">
                         <input
-                                bs-switch
-                                ng-model="value.value"
-                                switch-size="small"
-                                type="checkbox"
-                                switch-on-text="YES"
-                                switch-off-text="NO"
-                                ng-change="updateApi(api)"
+                          bs-switch
+                          ng-model="value.value"
+                          switch-size="small"
+                          type="checkbox"
+                          switch-on-text="YES"
+                          switch-off-text="NO"
+                          ng-change="updateApi(api)"
                         >
 
                     </div>
+
+                    <!-- TYPE: FILE -->
                     <div ng-switch-when="file">
-                        <!--<input type="file"-->
-                               <!--ngf-select ng-model="value.value" name="value.value"-->
-                        <!--/>-->
-                        <!--<br>-->
-                        <p class="text-primary">
-                            To change the certificates you must remove the plugin and add it again
-                        </p>
-                        <pre>{{value.value}}</pre>
+                        <input type="file"
+                               ngf-select ng-model="data.value" name="data.value"
+                        />
                     </div>
+
+                    <!-- DEFAULT -->
                     <div ng-switch-default>
                         <input type="{{value.type}}" ng-model="value.value" class="form-control">
 
