--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -461,6 +461,26 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label class="col-sm-2 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+                <div class="col-sm-10">
+                  <chips ng-model="pluginConfig.tags">
+                    <chip-tmpl>
+                      <div class="default-chip">
+                        {{chip}}
+                        <i class="mdi mdi-close" remove-chip></i>
+                      </div>
+                    </chip-tmpl>
+                    <input chip-control/>
+                  </chips>
+                  <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+                  <p class="help-block">
+                    An optional set of strings associated with the Plugin, for grouping and filtering.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
             <hr/>
