--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -299,6 +299,24 @@
                   </p>
                 </div>
               </div>
+              <div class="form-group">
+                <label class="col-sm-3 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+                <div class="col-sm-9">
+                  <chips ng-model="modelPlugin.tags">
+                    <chip-tmpl>
+                      <div class="default-chip">
+                        {{chip}}
+                        <i class="mdi mdi-close" remove-chip></i>
+                      </div>
+                    </chip-tmpl>
+                    <input chip-control/>
+                  </chips>
+                  <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+                  <p class="help-block">
+                    An optional set of strings associated with the Plugin, for grouping and filtering.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
