--- a/konga/assets/js/app/consumers/index.html
+++ b/konga/assets/js/app/consumers/index.html
@@ -56,7 +56,7 @@
           <td>
             <span class="badge badge-tag badge-success badge-inverse" ng-repeat="tag in consumer.tags"><i class="mdi mdi-tag"></i>&nbsp;{{tag}}</span>
           </td>
-          <td>{{moment(consumer.created_at*1000).format("MMM DD YYYY @h:mm")}}</td>
+          <td>{{moment(consumer.created_at*1000).format("MMM DD YYYY")}}</td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
             <button type="button"
                     ng-click="deleteConsumer(consumer)" class="btn btn-danger btn-link">
